# test2

./: README.md  pyproject.toml  yamlfile.yaml
.github/workflows/: ci.yml  push-pr.yaml
hospital/: __init__.py  cli.py  models.py  repo.py
hospital_system.egg-info/: PKG-INFO  SOURCES.txt
src/: app.js  test.sh
tests/: test_cli.py  test_repo.py
